<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeDetail">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/username"
        android:hint="@string/user_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/role"
        android:hint="@string/employee_role"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/enter_work_location_id_here"
        android:inputType="number"
        android:id="@+id/enterLocationID"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/workDays"
            android:hint="@string/work_time"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/workShifts"
            android:hint="@string/work_shifts"
            android:layout_weight="1"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_workday"
            android:textSize="20sp"
            android:id="@+id/pickWorkDays"
            android:layout_weight="1" />


        <Button
            android:id="@+id/pickShift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_shift"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/showLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_locations"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_information"
        android:textSize="20sp" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textSize="20sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/locationList"
        android:isScrollContainer="false"/>

</LinearLayout>