<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:hint="@string/there_will_be_a_username"/>

    <TextView
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:hint="@string/there_will_be_role"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:hint="@string/there_will_be_a_location"/>

    <TextView
        android:id="@+id/worktime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:hint="@string/there_will_be_worktime"/>

    <TextView
        android:id="@+id/workshift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:hint="@string/there_will_be_workshift"/>
</LinearLayout>