<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:id="@+id/showProfile">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showRole"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FirstName"
            app:layout_constraintTop_toBottomOf="@+id/showRole"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editFirstName"
            android:hint="@string/change_your_first_name"
            app:layout_constraintTop_toBottomOf="@+id/FirstName"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LastName"
            app:layout_constraintTop_toBottomOf="@+id/editFirstName"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editLastName"
            android:hint="@string/change_your_last_name"
            app:layout_constraintTop_toBottomOf="@+id/LastName"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Address"
            app:layout_constraintTop_toBottomOf="@+id/editLastName"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editAddress"
            android:hint="@string/change_your_address_here"
            app:layout_constraintTop_toBottomOf="@+id/Address"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            app:layout_constraintTop_toBottomOf="@+id/editAddress"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:id="@+id/signOut"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>