<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:id="@+id/showProfile">

        <EditText
            android:id="@+id/enterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/enter_location_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp"
            android:inputType="text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterID"
            android:hint="@string/enter_location_id"
            app:layout_constraintTop_toBottomOf="@+id/enterAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="number" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="30dp"
            android:id="@+id/submit_location"
            app:layout_constraintTop_toBottomOf="@+id/enterID"
            app:layout_constraintStart_toStartOf="parent"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/locationList"
            android:isScrollContainer="false"
            app:layout_constraintTop_toBottomOf="@+id/submit_location"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>